[FIXED] I fixed the font clipping on the my skills page

--- a/css/mySkills.css
+++ b/css/mySkills.css
@@ -67,6 +67,10 @@
         margin-bottom: 0% !important;
     }
     
+    .title {
+        margin-bottom: 20px !important;
+    }
+
     .content{
         width: 16.66666667% !important;
         margin-left: 0% !important;
